# Atlas-sandbox

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: scope-boundary.md
reports/: run_06_preflight.md  run_06_report.md  run_07_preflight.md  run_07_report.md  run_08_preflight.md  run_08_report.md  run_09_preflight.md  run_09_report.md  run_10_preflight.md  run_10_report.md  task_01_preflight.md  task_01_report.md  task_02_preflight.md  task_02_report.md  task_03_preflight.md  task_03_report.md  task_04_preflight.md  task_04_report.md  task_05_preflight.md  task_05_report.md
src/: __init__.py  doc_generator.py  governance_edge_cases.py  ledger_cli.py  ledger_models.py  ledger_reader.py  lint_rules.py  model_linter.py  node_parser.py  schema_validator.py  schemas.py
tasks/: task_01_ledger_cli.md  task_02_governance_tests.md  task_03_schema_validator.md  task_04_doc_generator.md  task_05_model_linter.md
tests/: conftest.py  test_baseline.py  test_doc_generator.py  test_doc_generator_stress.py  test_governance_edge_cases.py  test_governance_stress.py  test_ledger_cli.py  test_ledger_reader.py  test_ledger_stress.py  test_linter_stress.py  test_model_linter.py  test_schema_stress.py  test_schema_validator.py
tests/fixtures/: clean_models.py  dirty_models.py  edge_case_ledger.jsonl  edge_case_node.py  expected_node_doc.md  governance_fixtures.py  invalid_build_plan.json  invalid_task_intent.json  pathological_models.py  sample_ledger.jsonl  sample_node.py  stress_build_plan.json  stress_task_intent.json  valid_build_plan.json  valid_task_intent.json
